fix hymn content margins on mobile

--- a/styles/pages/document.module.scss
+++ b/styles/pages/document.module.scss
@@ -28,7 +28,7 @@
       opacity: 0.85;
       padding: min(3.5vw, 12px);
       aspect-ratio: 1/1;
-      border-radius: 30px;
+      border-radius: 100%;
 
       img {
         position: relative;
