--- a/styles/pages/index.module.scss
+++ b/styles/pages/index.module.scss
@@ -307,7 +307,7 @@ $grid-gap-mobile: 1.2vw;
 }
 
 .book {
-  padding: 6% 8%;
+  padding: 6%;
   display: flex;
   flex-direction: column;
   align-items: center;
