--- a/styles/pages/search.module.scss
+++ b/styles/pages/search.module.scss
@@ -367,7 +367,7 @@
   left: 100%;
   height: 3.5rem;
   aspect-ratio: 1/1;
-  border-radius: 30px;
+  border-radius: 100%;
   background-color: var(--accent-color) !important;
   box-shadow: 0 3px 8px -1px #000000;
   transition: 150ms ease-out;
